[project]
name = "blive-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles",
    "aiohttp",
    "python-dotenv",
    "loguru",
    "cryptography",
    "brotli",
    "websockets",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.41",
    "asyncpg>=0.30.0",
    "asyncio>=3.4.3",
    "protobuf>=6.31.1",
    "apscheduler>=3.11.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
